--- a/package.json
+++ b/package.json
@@ -1,63 +1,128 @@
 {
-  "name": "thunder",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "lkoma",
-  "private": true,
-  "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js"
-  },
-  "dependencies": {
-    "prerender-spa-plugin": "^2.1.0",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+	"name": "demo",
+	"version": "1.0.0",
+	"description": "A Vue.js project",
+	"author": "oceanaly",
+	"private": true,
+	"scripts": {
+		"dev": "node build/makeDll.js && node build/dev-server.js",
+		"develop": "node build/makeDll.js && node build/dev-server.js",
+		"start": "npm run dev",
+		"lint": "eslint --ext .js,.vue src config build",
+		"lint-fix": "eslint --ext .js,.vue src config build --fix",
+		"build": "node build/makeDll.js && node build/build.js",
+		"add": "node build/createModule.js"
+	},
+	"dependencies": {
+		"@xunlei/vue-lazy-component": "^1.0.10",
+		"axios": "^0.17.1",
+		"babel-polyfill": "^6.26.0",
+		"better-scroll": "^1.8.0",
+		"clamp-js": "^0.7.0",
+		"detector": "^2.5.0",
+		"easy-enum.js": "^1.1.4",
+		"lodash": "^4.17.4",
+		"moment": "^2.20.1",
+		"muse-ui": "^2.1.0",
+		"normalize.css": "^7.0.0",
+		"smoothscroll-polyfill": "^0.4.0",
+		"vue": "^2.5.2",
+		"vue-router": "^3.0.1",
+		"vuex": "^3.0.1"
+	},
+	"devDependencies": {
+		"@babel/cli": "7.0.0-beta.38",
+		"@babel/core": "7.0.0-beta.38",
+		"@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.38",
+		"@babel/plugin-transform-runtime": "7.0.0-beta.38",
+		"@babel/preset-env": "7.0.0-beta.38",
+		"@babel/preset-flow": "7.0.0-beta.38",
+		"@babel/preset-stage-0": "7.0.0-beta.38",
+		"@babel/register": "7.0.0-beta.38",
+		"@babel/runtime": "^7.0.0-beta.38",
+		"autoprefixer": "^7.1.2",
+		"babel-eslint": "^8.2.1",
+		"babel-loader": "^8.0.0-beta.0",
+		"case-sensitive-paths-webpack-plugin": "^2.1.1",
+		"chalk": "^2.0.1",
+		"compression-webpack-plugin": "^1.1.3",
+		"connect-history-api-fallback": "^1.5.0",
+		"copy-webpack-plugin": "^4.0.1",
+		"cross-spawn": "^6.0.1",
+		"css-loader": "^0.28.9",
+		"eslint": "^4.16.0",
+		"eslint-config-airbnb-base": "^12.1.0",
+		"eslint-config-standard": "^11.0.0-beta.0",
+		"eslint-friendly-formatter": "^3.0.0",
+		"eslint-import-resolver-webpack": "^0.8.4",
+		"eslint-loader": "^1.9.0",
+		"eslint-plugin-html": "^4.0.1",
+		"eslint-plugin-import": "^2.7.0",
+		"eslint-plugin-node": "^5.2.0",
+		"eslint-plugin-promise": "^3.4.0",
+		"eslint-plugin-standard": "^3.0.1",
+		"eslint-plugin-vue": "^4.2.0",
+		"eventsource-polyfill": "^0.9.6",
+		"express": "^4.16.2",
+		"extract-text-webpack-plugin": "^3.0.0",
+		"favicons-webpack-plugin": "^0.0.7",
+		"file-loader": "^1.1.4",
+		"friendly-errors-webpack-plugin": "^1.6.1",
+		"glob": "^7.1.2",
+		"html-webpack-plugin": "^2.30.1",
+		"jest": "^22.1.4",
+		"jest-serializer-vue": "^0.3.0",
+		"less": "^2.7.3",
+		"less-loader": "^4.0.5",
+		"md5": "^2.2.1",
+		"mockjs": "^1.0.1-beta3",
+		"nightwatch": "^0.9.12",
+		"node-notifier": "^5.1.2",
+		"opn": "^5.1.0",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"optimize-js-plugin": "^0.0.4",
+		"ora": "^1.2.0",
+		"portfinder": "^1.0.13",
+		"postcss-cssnext": "^3.1.0",
+		"postcss-flexbugs-fixes": "^3.3.0",
+		"postcss-import": "^11.0.0",
+		"postcss-loader": "^2.0.8",
+		"postcss-short": "^4.1.0",
+		"postcss-utilities": "^0.7.0",
+		"react-dev-utils": "^5.0.0",
+		"rimraf": "^2.6.0",
+		"rucksack-css": "^1.0.2",
+		"selenium-server": "^3.0.1",
+		"semver": "^5.5.0",
+		"shelljs": "0.8.1",
+		"stylus": "^0.54.5",
+		"stylus-loader": "^3.0.1",
+		"uglifyjs-webpack-plugin": "^1.1.1",
+		"upath": "^1.0.2",
+		"url-loader": "^0.6.2",
+		"vue-eslint-parser": "2.0.2",
+		"vue-jest": "^1.0.2",
+		"vue-loader": "^13.7.0",
+		"vue-style-loader": "^3.0.1",
+		"vue-template-compiler": "^2.5.2",
+		"webpack": "^3.8.1",
+		"webpack-bundle-analyzer": "^2.9.0",
+		"webpack-dashboard": "^1.0.2",
+		"webpack-dev-middleware": "^2.0.3",
+		"webpack-dev-server": "^2.11.1",
+		"webpack-hot-middleware": "^2.21.0",
+		"webpack-merge": "^4.1.0",
+		"webpack-monitor": "^1.0.14",
+		"webpack-parallel-uglify-plugin": "^1.0.1",
+		"yargs": "^10.1.1"
+	},
+	"engines": {
+		"node": ">= 4.0.0",
+		"npm": ">= 3.0.0"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
